--- a/EmployeesApp/EmployeesApp.csproj
+++ b/EmployeesApp/EmployeesApp.csproj
@@ -204,6 +204,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChartGenerator.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
